# Hospital_Management_System

./: .gitignore  CMakeLists.txt  README.md  main.cpp  window.cpp  window.h  window.ui
